src/index.scss
@tailwind base;
@tailwind components;
@tailwind utilities;

// Colors

$background: #060606;

// Typography

$mainFont: "Montserrat", sans-serif;

html,
body {
  margin: 0;
  padding: 0;
}

body {
  font-family: $mainFont;
  background-color: $background;
  color: #f5f5f5;
  overflow-x: hidden;
}

*,
*::before,
*::after {
  box-sizing: border-box;
  scroll-behavior: smooth;
  
}

.copy-alert {
  width: 13rem;
  position: fixed;
  left: 50%;
  transform: translate(-50%, -50%);
  bottom: 0;
  background-color: rgba(0, 128, 0, 0.9);
  padding: 1rem 1.25rem;
  border-radius: 50px;
  margin: 0 auto;
  font-size: 1rem;
  transition: opacity 0.5s ease;
}

.copy-alert.hide {
  visibility: hidden;
  opacity: 0;
  transition: visibility 0.5s, opacity 0.5s linear;
}

